--- a/package.json
+++ b/package.json
@@ -2,11 +2,13 @@
   "name": "rocket-voter",
   "version": "1.0.0",
   "description": "for nlwweek is a voter that you can vote on things",
-  "main": "index.js",
+  "main": "dist/http/server.js",
   "author": "retr0lbb",
   "license": "MIT",
   "scripts": {
-    "dev": "tsx watch src/http/server.ts"
+    "dev": "tsx watch src/http/server.ts",
+    "migrate": "npx prisma migrate dev",
+    "build": "tsc"
   },
   "devDependencies": {
     "@types/node": "^20.11.16",
@@ -22,6 +24,7 @@
     "dotenv": "^16.4.1",
     "fastify": "^4.26.0",
     "ioredis": "^5.3.2",
+    "redis": "^4.6.13",
     "zod": "^3.22.4"
   }
 }
