--- a/package.json
+++ b/package.json
@@ -7,8 +7,7 @@
   "license": "MIT",
   "scripts": {
     "dev": "tsx watch src/http/server.ts",
-    "migrate": "npx prisma migrate dev",
-    "build": "tsc"
+    "migrate": "npx prisma migrate dev"
   },
   "devDependencies": {
     "@types/node": "^20.11.16",
