--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "rocket-voter",
   "version": "1.0.0",
   "description": "for nlwweek is a voter that you can vote on things",
-  "main": "src/http/server.ts",
+  "main": "dist/http/server.js",
   "author": "retr0lbb",
   "license": "MIT",
   "scripts": {
