--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "license": "MIT",
   "scripts": {
     "dev": "tsx watch src/http/server.ts",
-    "migrate": "npx prisma migrate dev"
+    "migrate": "npx prisma migrate dev",
+    "build": "tsc"
   },
   "devDependencies": {
     "@types/node": "^20.11.16",
