--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "license": "MIT",
   "scripts": {
     "dev": "tsx watch src/http/server.ts",
+    "start": "node .",
     "migrate": "npx prisma migrate dev",
     "build": "tsc"
   },
