--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@fastify/cors": "^9.0.1",
     "@fastify/websocket": "^8.3.1",
     "@prisma/client": "^5.9.1",
+    "axios": "^1.6.7",
     "dotenv": "^16.4.1",
     "fastify": "^4.26.0",
     "ioredis": "^5.3.2",
